--- a/project_foro/package.json
+++ b/project_foro/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "readline": "^1.3.0",
     "vue": "^3.0.0",
+    "vue-google-login": "^2.0.5",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
