--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .DS_Store
-node_modules
+backend/node_modules
+backend/package-lock.json
+frontend/package-lock.json
+frontend/node_modules
 /dist
 
 
@@ -21,3 +24,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+backend/package-lock.json
