--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,11 @@
   "author": "Héctor Saravia, Christian Tapia, Pedro carrasco",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7"
   }
 }
