--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .DS_Store
 /dist
+/backend/node_modules
+/backend/package-lock.json
+/frontend/package-lock.json
+/frontend/node_modules
 
 # local env files
 .env.local
@@ -19,7 +23,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-backend/node_modules
-backend/package-lock.json
-frontend/package-lock.json
-frontend/node_modules
+
