--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Héctor Saravia, Christian Tapia, Pedro carrasco",
   "license": "ISC",
   "dependencies": {
+    "@azure/service-bus": "^7.2.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
