--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend del proyecto de foro.",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon ./index.js"
+    "test": "nodemon ./app.js"
   },
   "author": "Héctor Saravia, Christian Tapia, Pedro carrasco",
   "license": "ISC",
