--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@azure/service-bus": "^7.3.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "readline": "^1.3.0",
